Fix text overflow in AppsScreen

--- a/portal/src/graphql/portal/AppsScreen.module.css
+++ b/portal/src/graphql/portal/AppsScreen.module.css
@@ -46,5 +46,6 @@
   color: #176df3;
   margin-bottom: 20px;
   font-size: 22px;
-  overflow-wrap: break-word;
+  /* Deprecated but safari does not support "overflow-wrap: break-word;" */
+  word-break: break-word;
 }
